--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,11 @@ dependencies {
 
     //  crashlytics
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta02'
+
+    //  open source notices
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.google.android.gms.oss-licenses-plugin'
