--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,11 @@ android {
 
 }
 
-ext.versions =  [
-    lifecycle: '2.2.0',
-    coroutines: '1.3.5',
-    koin: '2.1.5',
-    flowbinding: '0.10.2',
+ext.versions = [
+        lifecycle  : '2.2.0',
+        coroutines : '1.3.5',
+        koin       : '2.1.5',
+        flowbinding: '0.10.2',
 ]
 
 dependencies {
@@ -51,6 +51,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -79,6 +81,9 @@ dependencies {
 
     //  open source notices
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
+
+    //  custom tabs
+    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:1.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
