--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.about.AboutActivity"
+            android:theme="@style/AppTheme.About"
+            android:label="@string/about"
+            />
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
             android:theme="@style/LicensesTheme"
