--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta03'
-        classpath 'com.google.android.gms:oss-licenses-plugin:0.10.2'
+        classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.0.2"
     }
 }
 
