--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        debug {
+            manifest {
+                srcFile 'src/debug/AndroidManifest.xml'
+            }
+        }
+    }
     kotlinOptions {
         jvmTarget = "1.8"
     }
