--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ captures/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
+*.jks
 #*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
@@ -83,3 +83,6 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+#macOS
+*.DS_Store
