--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         applicationId "com.papageorgiouk.curfnsurf"
@@ -41,28 +41,30 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-
+    testOptions  {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 ext.versions = [
         lifecycle  : '2.2.0',
-        coroutines : '1.3.5',
+        coroutines : '1.3.7',
         koin       : '2.1.5',
-        flowbinding: '0.10.2',
+        flowbinding: '0.12.0',
 ]
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'com.google.android.material:material:1.3.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //  lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:${versions.lifecycle}"
@@ -84,13 +86,13 @@ dependencies {
     implementation 'com.github.adrielcafe:krumbsview:1.1.3'
 
     //  crashlytics
-    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta02'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
 
     //  open source notices
     implementation "com.mikepenz:aboutlibraries-core:8.0.2"
 
     //  custom tabs
-    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:1.1.0'
+    implementation 'com.google.androidbrowserhelper:androidbrowserhelper:2.1.0'
 
     //  leak canary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
