--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,5 +19,9 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Access AppCenter secret
+      env:
+        APPCENTER_SECRET: ${{ secrets.APPCENTER_SECRET }}
+      run: echo APPCENTER_SECRET=\"$APPCENTER_SECRET\" > ./local.properties
     - name: Build with Gradle
       run: ./gradlew assembleDebug
