--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,8 @@ String getAppCenterSecret() {
 }
 
 ext.versions = [
-        lifecycle   : '2.2.0',
-        coroutines  : '1.3.7',
+        lifecycle   : '2.3.0',
+        coroutines  : '1.4.2',
         koin        : '2.2.0',
         flowbinding : '0.12.0',
         appCenter   : '4.1.0'
@@ -67,10 +67,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'com.google.android.material:material:1.3.0-rc01'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
